# GBEmu

./: .gitignore  .gitmodules  CMakeLists.txt  build.zig
include/glad/: gl.h
src/: C.zig  audio.zig  cpu.zig  gameState.zig  gl.c  graphics.zig  main.zig  memory.zig
